# pdf-it

./: .env.example  .gitignore  README.md  SECURITY.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: tests.yml
.streamlit/: config.toml
docs/: design-spec.md  verification.md
src/pdf_it/: __init__.py  config.py  ingestion.py  pdf_renderer.py  prompts.py  providers.py  schemas.py  service.py  validation.py
src/typeset/: __init__.py  config.py  pdf_renderer.py  prompts.py  schemas.py  service.py  validation.py
tests/: test_app.py  test_ingestion.py  test_pdf_renderer.py  test_prompts.py  test_providers.py  test_service.py  test_validation.py
